[package]
name = "pwr-hd44780"
version = "0.1.3"

authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
license = "MIT"

description = "A driver for the HD44780 LCD. Has support for both I2C and GPIO buses + implements a high-speed buffered version."

repository = "https://github.com/Patryk27/pwr-hd44780"
maintenance = { status = "experimental" }

[dependencies]
i2cdev = "0.3"
rppal = "0.2"
